# SwMaster

./: .gitignore  GEMINI.md  GLOSSARY.md  OpenUI_spec.md  README.md  docker-compose.yml  package-lock.json  package.json
agents/architect/: RULES.md  SOUL.md  agent.yaml
agents/sw-master-agent/: DUTIES.md  SOUL.md  agent.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: graph.py  skills.py  state.py
backend/app/agents/nodes/: base.py  checker.py  conductor.py  executor.py  maker.py  planner.py
backend/app/api/: finance.py
backend/app/db/: session.py
backend/app/db/models/: finance.py
backend/app/models/: chat.py  dashboard.py  finance.py  thread.py
backend/app/services/: finance_service.py  thread_service.py
backend/app/utils/: streaming.py
backend/tests/: conftest.py  test_api.py  test_graph.py  test_health.py  test_main.py  test_models.py  test_nodes.py  test_services.py  test_skills.py  test_streaming.py  test_utils.py  test_workflows.py
doc/: README.md
frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DataTable.tsx  KPICard.tsx  KPICards.tsx  Sidebar.tsx  StrategyCard.tsx  TabBar.tsx  Topbar.tsx  TrendChart.tsx
frontend/lib/: api.ts
frontend/types/: finance.ts
memory/: context.md  dailylog.md  key-decisions.md
scripts/: check-build.ps1  check-build.sh  test_cancel_msg.py  unit_test_backend.py
skills/architect_and_planner/: SKILL.md
stitch/: code.html
(+27 files in other folders)
